styled open buttons to match mine

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -140,12 +140,21 @@ nav {
 	margin-bottom: 1em;
 }
 
-.a-dropdown:focus, .a-dropdown:hover {
-	background: $accent-color;
-	color: $body-color;
-	border: 1px solid $body-color;
-	outline-color: $body-color;
+// there is a split second where it's gray after you click out of it
+
+.a-dropdown:hover, .a-dropdown:focus {
+	background: $accent-color !important;
+	color: $body-color !important;
+	border: 1px solid $body-color !important;
+	outline-color: $body-color !important;
 }
+
+// .open .btn-default:hover, .open .btn-default:focus {
+// 	background: $accent-color !important;
+// 	color: $body-color !important;
+// 	border: 1px solid $body-color !important;
+// 	outline-color: $body-color !important;
+// }
 
 #clearfilter {
 	background: $body-color;
