--- a/templates/album.hbs
+++ b/templates/album.hbs
@@ -1,3 +1,3 @@
 {{#each songs}}
-	<li><a href="#">{{album}}</a></li>
+	<li><a href="#">{{album}}</a><span class="display-none">{{artist}}</span></li>
 {{/each}}
