added @key to songs handlebar template, got delete functionality to work

--- a/templates/songs.hbs
+++ b/templates/songs.hbs
@@ -1,5 +1,5 @@
 	{{#each songs}}
-	<div class="song-result">
+	<div class="song-result" id="{{@key}}">
 		<p class="song-name">{{title}}</p>
 		<span class="results-line"><span class="results-artist">{{artist}}</span><span class="results-divider">|</span><span class=""results-album>{{album}}</span></span>
 		<button class="delete">&times</button>
