--- a/partials/song-list.html
+++ b/partials/song-list.html
@@ -1,4 +1,4 @@
 <div id="results" class="bordered">
 	<div class='song-result' ng-repeat="song in songs"><p class='song-name'>{{song.title}}</p><span class='results-line results-artist'>{{song.artist}}</span><span class='results-line results-divider'>|</span><span class='results-line results-album'>{{song.album}}</span><button class='delete'>Delete</button></div>
-	<button class='more' ng-click="">More</button>
+	<button class='more' ng-click="moreSongs()">More</button>
 </div>
