using firebase now

--- a/styles/main.css
+++ b/styles/main.css
@@ -52,6 +52,10 @@ nav ul li a {
   text-decoration: none;
   color: white; }
 
+#results a {
+  text-decoration: none;
+  color: whitesmoke; }
+
 .hidden {
   visibility: hidden; }
 
