--- a/sass/main.scss
+++ b/sass/main.scss
@@ -61,6 +61,11 @@ nav ul li a {
 	color: white;
 }
 
+#results a {
+	text-decoration: none;
+	color: whitesmoke;
+}
+
 .hidden {
 	visibility: hidden;
 }
