--- a/partials/song-list.html
+++ b/partials/song-list.html
@@ -1,3 +1,3 @@
 <div id="results" class="bordered">
-	<div class='song-result' ng-repeat="song in songs"><p class='song-name'><a href="#/songs/details/{{song.$id}}">{{song.title}}</a></p><span class='results-line results-artist'>{{song.artist}}</span><span class='results-line results-divider'>|</span><span class='results-line results-album'>{{song.album}}</span><button class='delete'>Delete</button></div>
+	<div class='song-result' ng-repeat="song in songs"><p class='song-name'><a href="#/songs/details/{{song.$id}}">{{song.title}}</a></p><span class='results-line results-artist'>{{song.artist}}</span><span class='results-line results-divider'>|</span><span class='results-line results-album'>{{song.album}}</span><button class='delete' ng-click="deleteSong(song)">Delete</button></div>
 </div>
